[project]
name = "reconsentinel"
version = "1.0.0"
description = "Security reconnaissance toolkit: passive-first OSINT with active scanning capabilities (port scanning, DirBuster). Scope-aware with explainable findings."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Serene-Brew Team", email = "serene.brew.git@gmail.com"}, {name = "knightsky-cpu"}, {name = "mintRaven-05"}, {name = "ImonChakraborty"}]
license = {text = "BSD-3-Clause"}
keywords = ["security", "reconnaissance", "osint", "port-scanning", "dirbuster", "pentesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
  "typer>=0.12",
  "PyYAML>=6",
  "requests>=2.32",
  "dnspython>=2.6.1",
  "jinja2>=3.1",
  "rich>=13.7",
  "tldextract>=3.4"
]

[project.urls]
Homepage = "https://github.com/serene-brew/ReconSentinel"
Documentation = "https://github.com/serene-brew/ReconSentinel#readme"
Repository = "https://github.com/serene-brew/ReconSentinel"
Issues = "https://github.com/serene-brew/ReconSentinel/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# This tells Setuptools to ONLY package our code folder
[tool.setuptools.packages.find]
include = ["recon_sentinel*"]
exclude = ["fixtures*"]

# Include non-Python files we need at runtime
[tool.setuptools.package-data]
"recon_sentinel" = ["templates/*.j2", "rules/*.yaml", "libs/*.so"]

[project.scripts]
recon = "recon_sentinel.cli:_app_wrapper"
